--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
+HTML 
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>celebrations</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scrolling Text</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="bg"></div>
-  <div class="fixed-text">
-    <span> Happy Makara Sankranti </span>  
-  </div>
-  <div class="scrolling-text">
-    <marquee behavior="scroll" direction="left"> Pongal, Bihu, Sakrat, Uttarayana, Dahi Chura</marquee>
+  <div class="container">
+    <div class="scrolling-text">
+      <p class="scroll-text">Announcement</p>
+      <p>Submit your self-evaluation in HCM Performance by 17th May </p>
+    </div>
   </div>
 </body>
 </html>
