--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-HTML 
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scrolling Text</title>
+  <title>Scrolling Text with Background Image</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
     <div class="scrolling-text">
       <p class="scroll-text">Announcement</p>
-      <p>Submit your self-evaluation in HCM Performance by 17th May </p>
+      <p>Submit your self-evaluation in HCM Performance by 17th May</p>
     </div>
   </div>
 </body>
