--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scrolling Text with Background Image</title>
+  <title>Scrolling Announcement with Background Image</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <div class="scrolling-text">
-      <p class="scroll-text">Announcement</p>
-      <p>Submit your self-evaluation in HCM Performance by 17th May</p>
+    <div class="announcement">
+      <h1>Announcement</h1>
+      <div class="scrolling-text">
+        <p class="scroll-text">This is a scrolling text line.</p>
+      </div>
     </div>
   </div>
 </body>
