--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scrolling Announcement with Background Image</title>
+  <title>Scrolling Announcement </title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <div class="announcement">
       <h1>Announcement</h1>
       <div class="scrolling-text">
-        <p class="scroll-text">This is a scrolling text line.</p>
+        <p class="scroll-text">Submit your self-evaluation in HCM Performance by 17th May</p>
       </div>
     </div>
   </div>
