--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="announcement">
       <h1>Announcement</h1>
       <div class="scrolling-text">
-        <p class="scroll-text">Submit your self-evaluation in HCM Performance by 17th May</p>
+        <p class="scroll-text">Submit your self-evaluation by 17th May</p>
       </div>
     </div>
   </div>
